sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:10: error: ';' expected but integer literal found.
			if (plusPetit(i+1,i)){echange(i+1,i);swapped=true}fin -= 1}
                                                                                 ^AlgCocktailSort2:13: error: ';' expected but integer literal found.
			if (plusPetit(k+1,k)){echange(k+1,k);swapped=true}debut += 1}
                                                                                   ^